--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ var/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit new / coverage reports
 htmlcov/
 .tox/
 .coverage
