--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
 # local package
 -e .
 
-
 click==8.0.4
-datasets==2.7.1
+datasets==2.8.0
+evaluate==0.4.0
 Markdown==3.4.1
-Pillow==9.4.0
+numpy==1.23.5
 python-dotenv==0.21.0
-setuptools==65.5.0
-torch==1.13.1
-torchvision==0.14.1
+setuptools==65.6.3
 transformers==4.25.1
-
-
