--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 # local package
 -e .
 
+python-dotenv==0.21.0
+setuptools==65.6.3
+protobuf==3.20.*
 click==8.0.4
 datasets==2.8.0
 evaluate==0.4.0
+hydra-core==1.3.1
 Markdown==3.4.1
 numpy==1.23.5
-python-dotenv==0.21.0
+omegaconf==2.3.0
 setuptools==65.6.3
+torch==1.13.1
 transformers==4.25.1
-hydra-core==1.3.1
-protobuf==3.20.*
