--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,9 @@
 data : 
   seed : 69
-  size : 1000
+  # train_size max 650000
+  train_size : 100000
+  # test_size max 50000
+  test_size : 10000
   input_filepath : data/raw
   output_filepath : data/processed
 model : 
@@ -10,6 +13,11 @@ model :
   seed : 69
   jit_mode_eval : False
   optim : adamw_hf
+  logging_steps : 10
+  eval_accumulation_steps : 1
+  eval_steps : 50
+  evaluation_strategy : "steps"
+  logging_strategy : "steps"
 
 
 hydra:
