--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -19,7 +19,7 @@ model :
   evaluation_strategy : steps
   logging_strategy : steps
 predict :
-  model_path : models/pre_trained
+  model_path : models/experiments
   save_path : predictions
   size : 100
   seed : 42
