add black to flake8.yaml

--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -27,4 +27,6 @@ jobs:
     - name: Test with pytest
       run: |
         pip install flake8
+        pip install black
+        black .
         pytest flake8 .
