--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,28 +1,42 @@
-name: "Run tests"
+name: Unit tests
 
-on:
+on:   
   push:
-    branches: [ master, main ]
+    branches: [ master, main, Luca-dev ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ master, main, Luca-dev ]
+
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v2
-    - name: Set up Python 3.8
+
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
+
+    - name: Cache pip
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements_tests.txt
+
     - name: Test the dataset
       run: |
         pytest tests/test_dataset.py
